--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node18-strictest-esm/tsconfig.json",
-  "include": ["index.ts"],
+  "include": ["src/index.ts"],
   "compilerOptions": {
     "types": ["node"],
     "target": "ESNext",
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "noEmit": true,
+    // "noEmit": true,
     "baseUrl": ".",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
