--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node18-strictest-esm/tsconfig.json",
-  "include": ["index.ts"],
+  "include": ["src/index.ts"],
   "compilerOptions": {
     "types": ["node"],
     "target": "ESNext",
@@ -14,10 +14,10 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "removeComments": true,
-    "sourceMap": true,
+    "sourceMap": true, 
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "ignoreDeprecations": "5.0"
+    "ignoreDeprecations": "5.0",
   },
   "watchOptions": {
     // Use native file system events for files and directories
